# reward-service

./: .env  Cargo.toml
app/: Cargo.toml
app/src/: main.rs
app/src/routes/: auth.rs  notification.rs
controllers/: Cargo.toml
controllers/src/: api.rs  lib.rs
controllers/src/auth/: form.rs  mod.rs
controllers/src/notification/: form.rs  mod.rs
helpers/: Cargo.toml
models/: Cargo.toml  diesel.toml
models/src/: lib.rs
models/src/auth/: mod.rs  schema.rs
models/src/auth/models/: role.rs  user.rs
models/src/common/: mod.rs
models/src/notification/: mod.rs  schema.rs
models/src/notification/models/: notification.rs
services/: Cargo.toml
services/src/: auth.rs  lib.rs  notification.rs
