[package]
name = "controllers"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
services = { path = "../services" }
models = { path = "../models" }
rocket = { version = "0.5.1", features = ["json"] }
chrono = "*"
uuid = { version = "1.8.0", features = ["v4"] }
