[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["chrono"] }
dotenv = "0.15.0"
diesel-async = { version = "0.4.1", features = ["mysql"] }
